infra/k8s/backend.db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auctions-service-db-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auctions-service-db
  template:
    metadata:
      labels:
        app: auctions-service-db
    spec:
      containers:
        - name: auctions-service-db
          image: mysql:8
          volumeMounts:
            - name: mysql-init-db-config
              mountPath: /docker-entrypoint-initdb.d
            - name: mysql-data-persistance
              mountPath: /var/lib/mysql
          ports:
            - containerPort: 3306
              name: mysql
      volumes:
        - name: mysql-init-db-config
          configMap:
            name: mysql-init-db
        - name: mysql-data-persistance
          hostPath:
            path: /home/mysqldata
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: auctions-service-db-srv
spec:
  selector:
    app: auctions-service-db
  ports:
    - name: auctions-service-db
      protocol: TCP
      port: 3306
      targetPort: 3306
