infra/k8s/backend.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auctions-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auctions-service 
  template:
    metadata:
      labels:
        app: auctions-service 
    spec:
      containers:
        - name: auctions-service 
          image: vlad246/auctions-service:latest
          volumeMounts:
            - name: tms-db-volume
              mountPath: /app/uploads
      volumes:
        - name: tms-db-volume
          hostPath:
            path: /data/uploads
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: auctions-service-srv
spec:
  selector:
    app:auctions-service 
  ports:
    - name: auctions-service 
      protocol: TCP
      port: 3000
      targetPort: 3000
